tests/baselines/reference/fieldAndGetterWithSameName.errors.txt
fieldAndGetterWithSameName.ts(2,5): error TS2300: Duplicate identifier 'x'.
fieldAndGetterWithSameName.ts(3,7): error TS2300: Duplicate identifier 'x'.


==== fieldAndGetterWithSameName.ts (2 errors) ====
    export class C {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
      get x(): number { return 1; }
          ~
!!! error TS2300: Duplicate identifier 'x'.
    }